Moved webservice server to own file.
To break circular import.
